Fix connecting Montserrat font.

--- a/themes/custom/fitpreg/src/sass/partials/variables/_variables.scss
+++ b/themes/custom/fitpreg/src/sass/partials/variables/_variables.scss
@@ -8,9 +8,9 @@ $icon-col-pink: #ec188c;
 $color-searchbg: #f5f5f5;
 
 // Fonts
+@import url(https://fonts.googleapis.com/css?family=Montserrat);
 @font-face {
   font-family: 'Montserrat';
   font-size: 14px;
   line-height: 24px;
-  src: url(https://fonts.googleapis.com/css?family=Montserrat);
 }
