--- a/themes/custom/fitpreg/css/fitpreg.style.css
+++ b/themes/custom/fitpreg/css/fitpreg.style.css
@@ -1,9 +1,9 @@
 @charset "UTF-8";
+@import url(https://fonts.googleapis.com/css?family=Montserrat);
 @font-face {
   font-family: 'Montserrat';
   font-size: 14px;
-  line-height: 24px;
-  src: url(https://fonts.googleapis.com/css?family=Montserrat); }
+  line-height: 24px; }
 
 /*!
  *  Font Awesome 4.7.0 by @davegandy - http://fontawesome.io - @fontawesome
