--- a/themes/custom/fitpreg/templates/menu--left-menu.html.twig
+++ b/themes/custom/fitpreg/templates/menu--left-menu.html.twig
@@ -56,16 +56,16 @@
     {% endmacro %}
     <div class="social-links-in-menu">
       <a class="soc-li" href="https://www.facebook.com/fitpregnancy/">
-        <img height="40px" src="/sites/default/files/inline-images/face.png" width="40px" />
+        <img src="/themes/custom/fitpreg/images/icons/facebook.png"/>
       </a>
       <a class="soc-li" href="https://www.pinterest.com/fitpregnancy/">
-        <img height="40px" src="/sites/default/files/inline-images/parking.png" width="40px" />
+        <img src="/themes/custom/fitpreg/images/icons/pinterest.png"/>
       </a>
       <a class="soc-li" href="https://twitter.com/fitpregnancy/">
-        <img height="40px" src="/sites/default/files/inline-images/twitter.png" width="40px" />
+        <img src="/themes/custom/fitpreg/images/icons/twitter.png"/>
       </a>
       <a class="soc-li" href="http://instagram.com/fitpregnancy/">
-        <img height="40px" src="/sites/default/files/inline-images/insta.png" width="40px" />
+        <img src="/themes/custom/fitpreg/images/icons/instagram-logo-new.png"/>
       </a>
     </div>
 </div>
