--- a/themes/custom/fitpreg/src/sass/components/_period-block.scss
+++ b/themes/custom/fitpreg/src/sass/components/_period-block.scss
@@ -2,63 +2,121 @@
   border-color: $color-grey-light;
   border-style: solid;
   border-width: 1px 0;
-  padding: 16px 10px;
-  
+  padding: 6px 10px;
+  //overflow: hidden;
+
   .menu {
-    margin: 0;
-    position: relative;
-    
-    .menu-item {
-      display: inline-block;
-      font-size: 13px;
-      font-weight: normal;
-      margin-right: 12px;
-      
-      a {
-        color: $color-black;
-        text-decoration: none;
-      }
+    padding: 0 2%;
+    .slick-track {
+      display: flex;
+      margin: 0;
+      position: relative;
 
+      .menu-item {
+        position: relative;
+        flex: 1;
+        //display: inline-block;
+        font-size: 13px;
+        font-weight: normal;
+        margin-right: 13px;
 
-      &:first-child:hover a,
-      &:nth-child(42):hover a,
-      &:last-child:hover a {
-        color: $icon-col-pink;
-      }
-
-      &:first-child {
-        border-right: 1px solid $color-grey-light;
-        padding-right: 12px;
-      }
-
-
-      @for $i from 2 through 41 {
-
-        &:nth-child(#{$i}):hover a {
-          color: $color-white;
-          cursor: pointer;
+        a {
+          color: $color-black;
+          text-decoration: none;
+          vertical-align: middle;
+        }
+        &:nth-child(2){
           position: relative;
-
-          &::after {
-            background-color: $icon-col-pink;
-            border-radius: 50%;
-            content: '';
-            display: block;
-            height: 23px;
+          margin-left: 60px;
+          &:before {
+            content: 'Week';
+            font-size: 13px;
+            pointer-events: none;
+            display: inline-block;
             position: absolute;
-
-            @if ($i < 10 ) {
-              left: -9px;
-              top: -3px;
-            }
-            @else {
-              left: -5px;
-              top: -3px;
-            }
-
-            width: 23px;
-            z-index: -1;
+            width: auto;
+            height: auto;
+            color: #9e9e9e;
+            font-weight: 700;
+            text-transform: uppercase;
+            left: -61px;
+            top: 8px;
           }
+        }
+        &:first-child,
+        &:nth-child(42),
+        &:last-child {
+          border-right: 1px solid $color-grey-light;
+          line-height: 24px;
+          padding-right: 20px;
+          margin-right: 20px;
+          &:hover a {
+            color: $icon-col-pink;
+          }
+        }
+        &:nth-child(42),
+        &:last-child {
+          width: 30px !important;
+        }
+        &:last-child {
+          border: none;
+        }
+        &:nth-child(14),
+        &:nth-child(29),
+        &:nth-child(41) {
+          margin-right: 34px;
+          &::after {
+            content: '';
+            position: absolute;
+            right: -20px;
+            top: 0;
+            width: 1px;
+            height: 100%;
+            background: #dedede;
+          }
+        }
+        &:first-child {
+          padding-right: 35px;
+        }
+        @for $i from 2 through 41 {
+          &:nth-child(#{$i}) {
+            /* height: 33px; */
+             text-align: center;
+             vertical-align: middle;
+            /* width: 30px; */
+            color: #000;
+            cursor: pointer;
+            border: 1px solid #fff;
+            border-radius: 50%;
+            padding: 5px 14px;
+            @if ($i <= 14 ) {
+              //padding: 4px 16px 5px 9px
+              a {
+                position: relative;
+                top: 0;
+                right: 3px;}
+              }
+            @if ($i >= 15 ) {
+              //padding: 4px 16px 5px 9px
+              a {
+                position: relative;
+                top: 0;
+                right: 7px;}
+              }
+            //} @else if ($i > 10) {
+            //  padding: 6px 9px
+            //} @else if ($i <= 10) {
+            //  padding: 6px 11px;
+            //}
+          }
+          &:nth-child(#{$i}):hover {
+            a {
+              color: #fff;
+            }
+            background-color: #ec188c;
+            border: 1px #ec188c solid;
+          }
+          //z-index: -1;
         }
       }
     }
