--- a/themes/custom/fitpreg/src/sass/components/_header.scss
+++ b/themes/custom/fitpreg/src/sass/components/_header.scss
@@ -126,6 +126,7 @@ $transition-time: 200ms;
             margin: 0;
             padding: 0;
             position: relative;
+            cursor: pointer;
 
             .menu {
               display: none;
