Add component (popup-ajax-week-menu) to sass folders.

--- a/themes/custom/fitpreg/src/sass/fitpreg.style.scss
+++ b/themes/custom/fitpreg/src/sass/fitpreg.style.scss
@@ -8,6 +8,7 @@
 @import "components/period-block";
 @import "components/slick-slider";
 @import "components/maincont";
+@import "components/popup-ajax-week-menu";
 
 body {
   color: $color-black;
